--- a/src/app/layout/topbar/topbar.html
+++ b/src/app/layout/topbar/topbar.html
@@ -3,7 +3,8 @@
     <li>
       <a [routerLink]="'/home'" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{ exact: true }">Clientes</a>
     </li>
-    <li>Import</li>
+    <li>
+      <a [routerLink]="'/import'"  routerLinkActive="router-link-active" [routerLinkActiveOptions]="{ exact: true }">Import</a></li>
     <li>
       <a [routerLink]="'/'" >Salir</a>
     </li>
